Fixed spacings

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ li {
 
 .weather-app {
   border: 1px solid #dadde1;
-  padding: 15px;
+  padding: 15px 15px 0px 15px;
   border-radius: 10px;
 }
 
@@ -53,7 +53,6 @@ li {
 }
 
 #weather-display {
-  margin-top: 20px;
   display: none;
 }
 
@@ -74,4 +73,9 @@ li {
 
 .weather-forecast-temperature {
   font-size: 13px;
+}
+
+.form-control,
+#weather-display {
+  margin-bottom: 15px;
 }
